<resources>
    <string name="app_name">GjAnt</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDi26zGwm1FyqMkX-1sE2d2B8yhkvtK95o</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="sharepreferences" translatable="false">gjant_preferences</string>
    <string name="user_data" translatable="false">userdata</string>

    <string name="catalog">Catalog</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="orders">Orders</string>
    <string name="login_text">Signin to start</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="code">Code</string>
    <string name="brand">Brand</string>
    <string name="images">Images</string>
    <string name="tags">Tags</string>
    <string name="related_articles">Related Articles</string>
    <string name="quantity">Quantity</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="file_cart" translatable="false">file_cart</string>
    <string name="product_saved_cart_message">The client has been saved in cart</string>
    <string name="select_client">Select Client</string>
    <string name="complete_form">Complete Form</string>
    <string name="review_order">Review Order</string>
    <string name="you_must_select_a_customer">You must select a customer</string>
    <string name="selected_client_wallet_position" translatable="false">selected_client_wallet</string>
    <string-array name="order_type">
        <item>Selecciona el tipo de pedido</item>
        <item>Cotización</item>
        <item>Orden de compra</item>
    </string-array>
    <string name="you_must_select_type">Yout must select a type</string>
    <string name="create_order">Create Order</string>
    <string name="name">Name</string>
    <string name="lastname">Lastname</string>
    <string name="identification">Identification</string>
    <string name="assigned_vendor">Assigned Vendor</string>
    <string name="client_data">Client Data</string>
    <string name="fullname">Fullname</string>
    <string name="phone1">Phone 1</string>
    <string name="phone2">Phone 2</string>
    <string name="address">Address</string>
    <string name="type">Type</string>
    <string name="enterprise_data">Enterprise Data</string>
    <string name="products">Products</string>
    <string name="date">Date</string>
    <string name="order_code">Order Code</string>
    <string name="total">Total</string>
    <string name="bs" translatable="false">Bs</string>
    <string name="undo">Undo</string>
    <string name="phone">Phone</string>
    <string name="status">Status</string>
    <string name="creating_order">Creating Order...</string>
    <string name="client">Client</string>
    <string name="clients_location">Clients Location</string>
    <string name="order_detail">Order Detail</string>
</resources>
