<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home"
            android:checked="true" />
        <item
            android:id="@+id/nav_catalog"
            android:icon="@drawable/ic_view_list_black_24dp"
            android:title="@string/catalog" />

        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_archive_black_24dp"
            android:title="@string/orders"/>

        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_shopping_cart_white_24dp"
            android:title="@string/cart"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/logout"/>

    </group>


    <group android:checkableBehavior="single"
        android:id="@+id/menu_bottom">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings"/>

    </group>




</menu>