<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    app:layout_constraintTop_toBottomOf="@+id/vendor_content"
    android:id="@+id/client_content"
    android:layout_height="wrap_content"
    android:paddingBottom="32dp"
    android:background="@drawable/background_bottom_line">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:text="@string/client_data"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="32dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:text="@string/fullname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintLeft_toLeftOf="@+id/textView5"
        android:layout_marginEnd="32dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="32dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:text="Fullname here"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/client_fullname"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintLeft_toLeftOf="@+id/textView7"
        android:layout_marginEnd="32dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="32dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:text="@string/identification"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/client_fullname"
        app:layout_constraintLeft_toLeftOf="@+id/client_fullname"
        android:layout_marginEnd="32dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="32dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:text="Identification here here"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/client_identification"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintLeft_toLeftOf="@+id/textView8"
        android:layout_marginEnd="32dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="32dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:text="@string/phone1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/client_identification"
        app:layout_constraintLeft_toLeftOf="@+id/client_identification"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:layout_marginEnd="32dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="32dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:text="Phone here here here"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/client_phone1"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:layout_constraintLeft_toLeftOf="@+id/textView11"
        android:layout_marginEnd="32dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="32dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:text="@string/phone2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView12"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/client_phone1"
        app:layout_constraintLeft_toLeftOf="@+id/client_phone1"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:layout_marginEnd="32dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="32dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:text="Phone2 here here"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/client_phone2"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        app:layout_constraintLeft_toLeftOf="@+id/textView12"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_marginEnd="32dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="32dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:text="@string/address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView13"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/client_phone2"
        app:layout_constraintLeft_toLeftOf="@+id/client_phone2"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:layout_marginEnd="32dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="32dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:text="Address here here here"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/client_address"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        app:layout_constraintLeft_toLeftOf="@+id/textView13"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintHorizontal_bias="0.0" />
</android.support.constraint.ConstraintLayout>