<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/order_header_content"
    android:paddingBottom="16dp">

    <TextView
        android:text="Order Type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/order_type"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textAlignment="viewStart" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/order_code"
        android:text="ORDER22113ASADAE52"
        app:layout_constraintRight_toLeftOf="@+id/order_date"
        android:layout_marginEnd="96dp"
        android:layout_marginRight="96dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintLeft_toLeftOf="@+id/textView26"
        app:layout_constraintTop_toBottomOf="@+id/textView26"
        android:layout_marginTop="8dp" />

    <TextView
        android:text="19/01/2017"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/order_date"
        android:layout_marginEnd="32dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="32dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintTop_toBottomOf="@+id/textView25"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="1.0"
        android:textAlignment="textEnd" />

    <TextView
        android:text="@string/date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView25"
        android:layout_marginEnd="32dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="32dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/order_type" />

    <TextView
        android:text="@string/order_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView26"
        android:layout_marginStart="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="24dp"
        app:layout_constraintRight_toLeftOf="@+id/textView25"
        android:layout_marginEnd="96dp"
        android:layout_marginRight="96dp"
        app:layout_constraintHorizontal_bias="0.2"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintTop_toBottomOf="@+id/order_type"
        android:layout_marginTop="16dp" />

    <TextView
        android:text="@string/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/label_enterprise_rif"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:layout_marginEnd="32dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="32dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/order_code"
        android:layout_marginStart="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="24dp" />

    <TextView
        android:text="Description here here here here Description here here here here Description here here here here Description here here here here"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/order_description"
        app:layout_constraintTop_toBottomOf="@+id/label_enterprise_rif"
        app:layout_constraintLeft_toLeftOf="@+id/label_enterprise_rif"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="32dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:text="@string/order_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView28"
        android:layout_marginStart="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="32dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textAlignment="viewStart"
        app:layout_constraintHorizontal_bias="0.3"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/order_total" />

    <TextView
        android:text="@string/total"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/order_description"
        app:layout_constraintRight_toRightOf="@+id/order_description"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        tools:text="Total"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintHorizontal_bias="1.0"
        android:textAlignment="textEnd" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        android:layout_marginEnd="32dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="32dp"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textAlignment="textEnd"
        android:text="@string/bs" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/order_total"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintRight_toLeftOf="@+id/textView15"
        app:layout_constraintTop_toTopOf="@+id/textView15"
        tools:text="1.000.000.000"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textAlignment="textEnd" />

</android.support.constraint.ConstraintLayout>