<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/vendor_content"
    app:layout_constraintTop_toBottomOf="@+id/enterprise_content"
    android:layout_height="wrap_content"
    android:paddingBottom="32dp"
    android:background="@drawable/background_bottom_line">

    <TextView
        android:text="@string/assigned_vendor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/label_vendor"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="32dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:text="@string/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView9"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/label_vendor"
        app:layout_constraintLeft_toLeftOf="@+id/label_vendor"
        android:layout_marginEnd="32dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="32dp" />

    <TextView
        android:text="Name here here"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/vendor_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintLeft_toLeftOf="@+id/textView9"
        android:layout_marginEnd="32dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="32dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:text="@string/lastname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView10"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/vendor_name"
        app:layout_constraintLeft_toLeftOf="@+id/vendor_name"
        android:layout_marginEnd="32dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="32dp" />

    <TextView
        android:text="Last name here here"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/vendor_lastname"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintLeft_toLeftOf="@+id/textView10"
        android:layout_marginEnd="32dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="32dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:text="@string/identification"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/vendor_lastname"
        app:layout_constraintLeft_toLeftOf="@+id/vendor_lastname"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:layout_marginEnd="32dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="32dp" />

    <TextView
        android:text="Identification here here here"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/vendor_identification"
        app:layout_constraintTop_toBottomOf="@+id/textView16"
        app:layout_constraintLeft_toLeftOf="@+id/textView16"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_marginEnd="32dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="32dp"
        app:layout_constraintHorizontal_bias="0.0" />

</android.support.constraint.ConstraintLayout>