<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/login_container"
    tools:context=".view.impl.LoginActivity"
    android:background="@color/colorPrimary">

    <android.support.constraint.ConstraintLayout
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/login_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_width="185dp">

        <ImageView
            android:layout_width="103dp"
            android:layout_height="110dp"
            app:srcCompat="@mipmap/ic_launcher"
            android:id="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:text="@string/app_name"
            android:layout_width="73dp"
            android:layout_height="31dp"
            android:id="@+id/textView"
            android:fontFamily="sans-serif"
            android:textSize="24sp"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            android:layout_marginStart="8dp"
            app:layout_constraintLeft_toRightOf="@+id/imageView2"
            android:layout_marginLeft="8dp" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:background="@android:color/white"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:elevation="5dp"
        android:layout_height="wrap_content"
        android:id="@+id/login_content"
        android:layout_width="300dp">

        <RelativeLayout
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="wrap_content"
            android:id="@+id/relativeLayout"
            android:padding="20dp"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/login_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/login_text"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <EditText
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/username"
                android:inputType="text"
                android:hint="@string/username"
                style="@style/Widget.AppCompat.EditText"
                android:layout_below="@+id/login_text"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:layout_toStartOf="@+id/username_icon"
                android:layout_width="wrap_content"
                android:layout_toLeftOf="@+id/username_icon" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/password"
                style="@style/Widget.AppCompat.EditText"
                android:hint="@string/password"
                android:layout_below="@id/username"
                android:layout_marginTop="10dp"
                android:layout_toLeftOf="@+id/password_icon"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Button
                android:text="@string/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/login"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_below="@+id/password"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="14dp"
                android:elevation="2dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_username_grey"
                android:id="@+id/username_icon"
                android:layout_above="@+id/password"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/login_progressbar"
                android:layout_marginTop="15dp"
                android:layout_alignTop="@+id/username_icon"
                android:layout_centerHorizontal="true" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_password_grey"
                android:id="@+id/password_icon"
                android:layout_above="@+id/login"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
